[gd_scene load_steps=4 format=2]

[ext_resource path="res://Features/inventory.gd" type="Script" id=1]
[ext_resource path="res://fonts/cmu-typewriter/Typewriter.tres" type="DynamicFont" id=2]
[ext_resource path="res://Features/Slot1.gd" type="Script" id=3]

[node name="inventory" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="ColorRect" parent="."]
margin_right = 140.0
margin_bottom = 1070.0
color = Color( 0, 0, 0, 1 )

[node name="Slot1" type="ColorRect" parent="TextureRect" groups=["Slot"]]
margin_left = 15.0
margin_top = 30.0
margin_right = 125.0
margin_bottom = 140.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )

[node name="Button" type="Button" parent="TextureRect/Slot1"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 90.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="TextureRect/Slot1"]
margin_left = -300.0
margin_top = 3.0
margin_right = -20.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 1
autowrap = true
uppercase = true

[node name="Slot2" type="ColorRect" parent="TextureRect" groups=["Slot"]]
margin_left = 15.0
margin_top = 180.0
margin_right = 125.0
margin_bottom = 290.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="TextureRect/Slot2"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 90.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="TextureRect/Slot2"]
margin_left = -300.0
margin_top = 3.0
margin_right = -20.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 1
autowrap = true
uppercase = true

[node name="Slot3" type="ColorRect" parent="TextureRect" groups=["Slot"]]
margin_left = 15.0
margin_top = 330.0
margin_right = 125.0
margin_bottom = 440.0
rect_min_size = Vector2( 80, 80 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="TextureRect/Slot3"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 90.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="TextureRect/Slot3"]
margin_left = -300.0
margin_top = 3.0
margin_right = -20.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 1
autowrap = true
uppercase = true

[node name="Slot4" type="ColorRect" parent="TextureRect" groups=["Slot"]]
margin_left = 15.0
margin_top = 480.0
margin_right = 125.0
margin_bottom = 590.0
rect_min_size = Vector2( 90, 90 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="TextureRect/Slot4"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 90.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="TextureRect/Slot4"]
margin_left = -300.0
margin_top = 3.0
margin_right = -20.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 1
autowrap = true
uppercase = true

[node name="Slot5" type="ColorRect" parent="TextureRect" groups=["Slot"]]
margin_left = 15.0
margin_top = 630.0
margin_right = 125.0
margin_bottom = 740.0
rect_min_size = Vector2( 90, 90 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="TextureRect/Slot5"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 90.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="TextureRect/Slot5"]
margin_left = -300.0
margin_top = 3.0
margin_right = -20.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 1
autowrap = true
uppercase = true

[node name="Slot6" type="ColorRect" parent="TextureRect" groups=["Slot"]]
margin_left = 15.0
margin_top = 780.0
margin_right = 125.0
margin_bottom = 890.0
rect_min_size = Vector2( 90, 90 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="TextureRect/Slot6"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 90.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="TextureRect/Slot6"]
margin_left = -300.0
margin_top = 3.0
margin_right = -20.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 1
autowrap = true
uppercase = true

[node name="Slot7" type="ColorRect" parent="TextureRect" groups=["Slot"]]
margin_left = 15.0
margin_top = 930.0
margin_right = 125.0
margin_bottom = 1040.0
rect_min_size = Vector2( 90, 90 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="TextureRect/Slot7"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 90.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="TextureRect/Slot7"]
margin_left = -300.0
margin_top = 3.0
margin_right = -20.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 2
valign = 1
autowrap = true
uppercase = true

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/hseparation = 48
columns = 12
__meta__ = {
"_edit_group_": true
}

[connection signal="pressed" from="TextureRect/Slot1/Button" to="TextureRect/Slot1" method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/Slot2/Button" to="TextureRect/Slot2" method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/Slot3/Button" to="TextureRect/Slot3" method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/Slot4/Button" to="TextureRect/Slot4" method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/Slot5/Button" to="TextureRect/Slot5" method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/Slot6/Button" to="TextureRect/Slot6" method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/Slot7/Button" to="TextureRect/Slot7" method="_on_Button_pressed"]
